_sass/_custom.scss
//
//
// Skylight font faces, brand colors, and font sizes
//
//

// Font faces
@font-face {
  font-family: 'Geomanist';
  font-style: normal;
  font-weight: 400;
  src: url('/fonts/geomanist-regular-webfont.eot');
  src: url('/fonts/geomanist-regular-webfont.eot?#iefix') format('embedded-opentype'),
       url('/fonts/geomanist-regular-webfont.woff2') format('woff2'),
       url('/fonts/geomanist-regular-webfont.woff') format('woff'),
       url('/fonts/geomanist-regular-webfont.ttf') format('truetype'),
       url('/fonts/geomanist-regular-webfont.svg#geomanist_regularregular') format('svg');
}

@font-face {
  font-family: 'Geomanist';
  font-style: normal;
  font-weight: 700;
  src: url('/fonts/geomanist-medium-webfont.eot');
  src: url('/fonts/geomanist-medium-webfont.eot?#iefix') format('embedded-opentype'),
       url('/fonts/geomanist-medium-webfont.woff2') format('woff2'),
       url('/fonts/geomanist-medium-webfont.woff') format('woff'),
       url('/fonts/geomanist-medium-webfont.ttf') format('truetype'),
       url('/fonts/geomanist-medium-webfont.svg#geomanistmedium') format('svg');
}

@font-face {
  font-family: 'Geomanist';
  font-style: normal;
  font-weight: 100;
  src: url('/fonts/geomanist-light-webfont.eot');
  src: url('/fonts/geomanist-light-webfont.eot?#iefix') format('embedded-opentype'),
       url('/fonts/geomanist-light-webfont.woff2') format('woff2'),
       url('/fonts/geomanist-light-webfont.woff') format('woff'),
       url('/fonts/geomanist-light-webfont.ttf') format('truetype'),
       url('/fonts/geomanist-light-webfont.svg#geomanistlight') format('svg');
}

@font-face {
  font-family: 'Geomanist';
  font-style: italic;
  font-weight: 400;
  src: url('/fonts/geomanist-regular-italic-webfont.eot');
  src: url('/fonts/geomanist-regular-italic-webfont.eot?#iefix') format('embedded-opentype'),
       url('/fonts/geomanist-regular-italic-webfont.woff2') format('woff2'),
       url('/fonts/geomanist-regular-italic-webfont.woff') format('woff'),
       url('/fonts/geomanist-regular-italic-webfont.ttf') format('truetype'),
       url('/fonts/geomanist-regular-italic-webfont.svg#geomanistregular_italic') format('svg');
}

@font-face {
  font-family: 'Geomanist';
  font-style: italic;
  font-weight: 700;
  src: url('/fonts/geomanist-medium-italic-webfont.eot');
  src: url('/fonts/geomanist-medium-italic-webfont.eot?#iefix') format('embedded-opentype'),
       url('/fonts/geomanist-medium-italic-webfont.woff2') format('woff2'),
       url('/fonts/geomanist-medium-italic-webfont.woff') format('woff'),
       url('/fonts/geomanist-medium-italic-webfont.ttf') format('truetype'),
       url('/fonts/geomanist-medium-italic-webfont.svg#geomanistmedium_italic') format('svg');
}

@font-face {
  font-family: 'Geomanist';
  font-style: italic;
  font-weight: 100;
  src: url('/fonts/geomanist-light-italic-webfont.eot');
  src: url('/fonts/geomanist-light-italic-webfont.eot?#iefix') format('embedded-opentype'),
       url('/fonts/geomanist-light-italic-webfont.woff2') format('woff2'),
       url('/fonts/geomanist-light-italic-webfont.woff') format('woff'),
       url('/fonts/geomanist-light-italic-webfont.ttf') format('truetype'),
       url('/fonts/geomanist-light-italic-webfont.svg#geomanistlight_italic') format('svg');
}

// Brand colors
$cool-gray: #53565a;
$reflex-blue: #001489;
$chathams-blue: #1d428a;
$matisse: #1d4f91;
$deep-cerulean: #0076a8;
$eucalyptus: #228848;
$sushi: #6ba539;
$supernova: #f2cd00;
$tangerine: #ed8b00;
$flame-pea: #dc6b2f;
$trinidad: #dc4405;
$flush-mahogany: #cb333b;
$honey-flower: #6d2077;

// Font sizes
$font-size-xxxxx-large: 3rem;
$font-size-xxxx-large: 2.5rem;
$font-size-xxx-large: 2rem;
$font-size-xx-large: 1.75rem;
$font-size-x-large: 1.5rem;
$font-size-large: 1.25rem;
$font-size-medium: 1.125rem;
$font-size-small: 1rem;
$font-size-x-small: .95rem;
$font-size-xx-small: .9rem;
$font-size-xxx-small: .85rem;
$font-size-xxxx-small: .8rem;

// Bootstrap overrides
//
// Copy variables from `_variables.scss` to this file to override default values
// without modifying source files.
//

// Colors
$white: #fff;

$gray: $cool-gray;
$gray-dark: darken($gray, 10%);
$gray-light: lighten($gray, 10%);
$gray-lighter: lighten($gray, 30%);
$gray-lightest: lighten($gray, 50%);

$brand-primary: $deep-cerulean;
$brand-success: $eucalyptus;
$brand-info: $deep-cerulean;
$brand-warning: $tangerine;
$brand-danger: $flush-mahogany;
$brand-inverse: $gray-dark;

// Body
$body-color: $gray-dark;

// Links
$link-color: $brand-primary;
$link-hover-color: darken($link-color, 15%) !default;
$link-hover-decoration: none;

// Fonts
$font-family-sans-serif: 'Geomanist', sans-serif;

$font-size-base: $font-size-medium;
$font-size-lg: $font-size-large;
$font-size-sm: $font-size-xx-small;
$font-size-xs: $font-size-xxx-small;

$line-height-base: 1.7;

$font-size-h1: 4rem;
$font-size-h2: 3rem;
$font-size-h3: 1.75rem;

$font-weight-normal: 400;
$font-weight-bold: 700;

$headings-margin-bottom: 0;
$headings-font-weight: 700;

$lead-font-weight: 100;

$text-muted: $gray-light;

$list-inline-padding: 0;

// Navbar
$navbar-padding-x: 0;

// Forms
$form-group-margin-bottom: 2rem;
$form-check-margin-bottom: $form-group-margin-bottom;

$input-color-placeholder: $gray-lighter;

// Buttons
$btn-primary-color: $white;
$btn-primary-bg: $flame-pea;
$btn-primary-border: $flame-pea;

$btn-secondary-color: $brand-primary;
$btn-secondary-bg: $white;
$btn-secondary-border: $brand-primary;

// Jumbotron
$jumbotron-bg: $brand-primary;

// Cards
$card-border-color: $gray-lightest;
$card-cap-bg: $white;

// Tooltips
$tooltip-bg: $brand-primary;

//
//
// Skylight variables
//
//

// Colors
$brand-primary-muted: rgba($brand-primary, .7);

// Links
$text-link-color: $brand-primary;
$text-link-hover-color: $text-link-color;
$text-link-border: 1px dotted $text-link-color;
$text-link-border-hover: 1px solid $text-link-hover-color;

$header-display-1: 4rem;
$header-display-2: 3rem;

// Main nav
$nav-brand-width-sm-down: 150px;
$nav-brand-height-sm-down: 40px;
$nav-brand-width: 200px;
$nav-brand-height: 50px;

$nav-link-color: $body-color;
$nav-link-decoration: none;
$nav-link-hover-color: $nav-link-color;
$nav-link-hover-decoration: none;
$nav-link-border-color: $brand-primary;

$nav-toggler-color: $nav-link-color;
$nav-toggler-hover-color: $brand-primary;

// Jumbotron
$jumbotron-color: $white;

// Forms
$control-label-color: $body-color;
$control-label-font-size: $font-size-base;

$help-text-link-color: $text-muted;
$help-text-link-hover-color: $brand-primary;
$help-text-link-border: 1px dotted $help-text-link-color;
$help-text-link-border-hover: 1px solid $help-text-link-hover-color;

$form-icons-margin-bottom: $form-group-margin-bottom;

$form-icons-border-color: $gray-lightest;

$form-icon-color: $form-icons-border-color;
$form-icon-hover-color: $brand-primary;

$btn-form-color: $body-color;
$btn-form-bg: $white;
$btn-form-border: $btn-form-color;
$btn-form-active-color: $brand-primary;

// Cards
$card-box-shadow: 0 1px 9px rgba(0, 0, 0, .3);

// Modals
$modal-header-color: $brand-primary;

// Footer
$footer-brand-width-sm-down: 158px;
$footer-brand-height-sm-down: 50px;
$footer-brand-width: 190px;
$footer-brand-height: 60px;

$footer-nav-link-color: $body-color;
$footer-nav-link-hover-color: $brand-primary;
$footer-nav-link-border: 1px dotted $footer-nav-link-color;
$footer-nav-link-border-hover: 1px solid $footer-nav-link-hover-color;

$footer-socials-link-color: $footer-nav-link-color;
$footer-socials-link-hover-color: $footer-nav-link-hover-color;
$footer-socials-link-border: none;
$footer-socials-link-border-hover: none;

$footer-nav-link-divider-color: $footer-nav-link-color;

$btn-footer-color: $body-color;
$btn-footer-bg: $white;
$btn-footer-border: $btn-footer-color;
$btn-footer-active-color: $brand-primary;

// Page CTA (subfooter)
$page-cta-color: $white;
$page-cta-bg-color: $brand-primary;

$btn-page-cta-color: $white;
$btn-page-cta-bg: $brand-primary;

// Project case studies
$project-aside-link-color: $body-color;
$project-aside-link-hover-color: $brand-primary;
$project-aside-link-border: 1px dotted $project-aside-link-color;
$project-aside-link-border-hover: 1px solid $project-aside-link-hover-color;

// Filters
$filter-item-link-color: $body-color;
$filter-item-link-hover-color: $brand-primary;
$filter-item-link-border: none;
$filter-item-link-border-hover: none;

// Posts
$post-header-footer-color: $gray-light;

$post-header-footer-link-color: $post-header-footer-color;
$post-header-footer-link-hover-color: $brand-primary;
$post-header-footer-link-border: 1px dotted $post-header-footer-link-color;
$post-header-footer-link-border-hover: 1px solid $post-header-footer-link-hover-color;

$btn-share-color: $post-header-footer-color;
$btn-share-bg: $white;
$btn-share-border: $btn-share-color;
$btn-share-active-color: $brand-primary;

.left-justified-list{
  ol,
  ul,
  dl {
    margin-top: 0;
    margin-bottom: 1rem;
    padding-inline-start: 20px;
  }

  ul {
    list-style: none; /* Remove default bullets */
  }

  ul li::before {
    content: "\2022";  /* Add content: \2022 is the CSS Code/unicode for a bullet */
    color: $gray-light; /* Change the color */
    font-weight: bold; /* If you want it to be bold */
    display: inline-block; /* Needed to add space between the bullet and the text */ 
    width: 1em; /* Also needed for space (tweak if needed) */
    margin-left: -1em; /* Also needed for space (tweak if needed) */
  }
  
}

